alignment fixes for firefox sidebar

--- a/src/popup/less/pages.less
+++ b/src/popup/less/pages.less
@@ -20,6 +20,10 @@
         width: 270px;
         display: block;
     }
+
+    p {
+        text-align: inherit;
+    }
 }
 
 .home-page {
@@ -36,6 +40,7 @@
 
     p {
         font-size: 18px;
+        text-align: inherit;
     }
 
     a.settings-icon {
@@ -68,6 +73,10 @@
         display: block;
         margin: 0 auto;
     }
+
+    p {
+        text-align: inherit;
+    }
 }
 
 .two-factor-key-page {
@@ -77,6 +86,10 @@
     .img-responsive {
         margin-left: auto;
         margin-right: auto;
+    }
+
+    p {
+        text-align: inherit;
     }
 }
 
