--- a/src/popup/less/plugins.less
+++ b/src/popup/less/plugins.less
@@ -117,6 +117,10 @@
         background-color: @brand-warning !important;
     }
 
+    .sa-button-container {
+        text-align: inherit;
+    }
+
     button {
         border-radius: 0;
         -webkit-border-radius: 0;
